buttons now in mobile are ok

--- a/src/pages/css/Home.css
+++ b/src/pages/css/Home.css
@@ -10,6 +10,14 @@
 .DateButton {
     background-color: #292929;
     border-color: var(--hover-bg-color);
+}@media screen and (max-width: 768px) {
+    .Date{
+    font-size: 32px;
+    font-weight: bold;
+    color: #ffffff; /* color del texto */
+    padding: 16px;
+    }
+   
 }
 
 .DateButton:disabled {
