--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,17 @@
   text-align: center;
 }
 
+.cristalCard {
+     background: rgba(255, 255, 255, 0.09); /* blanco transparente */
+    backdrop-filter: blur(10px); /* desenfoque */
+    -webkit-backdrop-filter: blur(10px); /* compatibilidad con Safari */
+    border-radius: 16px;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    padding: 2em;
+    box-shadow: 0 4px 50px rgba(0, 0, 0, 0.1); /* sombra suave */
+  
+}
+
 /* Ajustes para móviles */
 @media screen and (max-width: 768px) {
   #root {
