--- a/src/index.css
+++ b/src/index.css
@@ -3,9 +3,9 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
+  /* color-scheme: light dark; */
   color: rgba(255, 255, 255, 0.87);
-  background-color: #E78853;
+  background-color: rgb(17, 40, 67);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -42,7 +42,7 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #292929;
+  background-color: #c8c8c8;
   cursor: pointer;
   transition: border-color 0.25s;
 }
@@ -54,10 +54,10 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-@media (prefers-color-scheme: light) {
+/* @media (prefers-color-scheme: light) {
   :root {
-    color: #213547;
-    background-color: #E78853;
+    color: rgba(255, 255, 255, 0.87);
+    background-color:  rgba(29,65,109,0.50);
   }
   a:hover {
     color: #747bff;
@@ -65,4 +65,4 @@ button:focus-visible {
   button {
     background-color: #292929;
   }
-}
+} */
