--- a/src/pages/css/Home.css
+++ b/src/pages/css/Home.css
@@ -8,7 +8,7 @@
 } 
 
 .TimeButton {
-    background-color: #292929;
+    background-color: #c8c8c8;
     border-color: var(--hover-bg-color);
 }@media screen and (max-width: 768px) {
     .Time{
