--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,9 @@
 
   /* color-scheme: light dark; */
   color: rgba(255, 255, 255, 0.87);
-  background-color: #4051b5ff;
-  background-image: url("data:image/svg+xml,<svg id='patternId' width='100%' height='100%' xmlns='http://www.w3.org/2000/svg'><defs><pattern id='a' patternUnits='userSpaceOnUse' width='40' height='40' patternTransform='scale(1) rotate(35)'><rect x='0' y='0' width='100%' height='100%' fill='%233f51b5ff'/><path d='M15 5h10v30H15zM35-5V5H5V-5zM35 35v10H5V35zM35-15h10v30H35zM55 15v10H25V15zM15 15v10h-30V15zM35 25h10v30H35zM-5 25H5v30H-5zM-5-15H5v30H-5z'  stroke-width='1.5' stroke='%23000000ff' fill='none'/></pattern></defs><rect width='800%' height='800%' transform='translate(0,0)' fill='url(%23a)'/></svg>");
-
+  background-color: #10123c;
+  background-image: url("data:image/svg+xml,%3Csvg width='60' height='60' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' stroke='%231a1d5d' stroke-width='6'%3E%3Cpath d='M10 10 Q 20 0, 30 10'/%3E%3Cpath d='M0 30 Q 10 40, 20 30'/%3E%3Cpath d='M40 0 L 60 20'/%3E%3Cpath d='M30 30 Q 40 20, 50 30'/%3E%3Cpath d='M10 50 L 30 60'/%3E%3Cpath d='M50 40 Q 60 50, 70 40'/%3E%3C/g%3E%3C/svg%3E");
+  background-repeat: repeat;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
