--- a/src/pages/css/Area.css
+++ b/src/pages/css/Area.css
@@ -4,8 +4,11 @@
     
 }
 .AreaButton {
-    padding: 1em;
-    margin: 1em;
+    padding: .7em;
+    width: 12em;
+    margin: .7em;
+    background-color: rgba(50, 57, 225, 1);
+    color: white;
 
 }.AreaButton:hover {
     background-color: rgba(255, 255, 255, 0.5);
