fix: full inscription message

--- a/src/pages/css/Schedule.css
+++ b/src/pages/css/Schedule.css
@@ -52,11 +52,11 @@
 }
 
 .tableTitle {
-    font-size: large;
+    font-size: 16px;
     padding: 2px;
 }
 .tableTitleMid {
-    font-size: large;
+    font-size: 16px;
     padding: 2px;
 
 }
