--- a/src/pages/css/Area.css
+++ b/src/pages/css/Area.css
@@ -14,3 +14,23 @@
     background-color: rgba(255, 255, 255, 0.5);
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
 }
+
+button .goBack {
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    background: #ff8c24;
+    color: white;
+    font-size: 12px;
+}
+
+@media screen and (max-width: 768px) {
+.goBack {
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    background: #ff8c24;
+    color: white;
+    font-size: 12px;
+}
+} 
